解密兼容